--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
-    "classnames": "^2.3.2",
+    "@tanstack/react-query": "^5.18.1",
+    "@tanstack/react-table": "^8.11.8",
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
