--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "build": "tsc && vite build"
+    "test:e2e": "cypress run",
+    "build": "tsc && vite build",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
@@ -27,6 +29,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-istanbul": "^0.32.4",
     "autoprefixer": "^10.4.14",
+    "cypress": "^13.6.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
