--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
