--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idea-board",
+  "name": "nord-security-task",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,10 @@
     "test:e2e": "cypress run",
     "build": "tsc && vite build",
     "cypress:open": "cypress open"
+  },
+  "engines" : { 
+    "npm" : ">=10.0.0 <11.0.0",
+    "node" : ">=20.0.0 <21.0.0"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
